using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Const 
{
    public const string PLAYER_TAG = "Player";
    public const string ENEMY_TAG = "Enemy";
    public const string ENEMY_PUNCH_TAG = "EnemyPunch";

    public const string ATTACK1_ANIM = "Attacking 1";

    public const string HIT1_ANIM = "Hit 1";
    public const string HIT2_ANIM = "Hit 2";

    public const string KNOCKEDOUT_ANIM = "Knouched out";
    public const string VICTORY_ANIM = "Victory";
    public const string JUMP_ANIM = "Jump";
    public const string WALK_ANIM = "Walking";
    public const string ATTACK_COMBO_ANIM = "Attacking 2";

    public const string BLOOD_PREF = "blood";
    public const string CUR_PLAYER_ID_PPREF = "cur_player_id";



}
